spec/e2e/unexpected_character.lit
# error: [line 2] Syntax error: Unexpected character '^'
foo(a ^ b)
